--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ urllib3==1.26.5  # High vulnerability
 html5lib==1.1  # High vulnerability
 werkzeug==1.0.1  # High vulnerability
 jinja2==2.11.3  # High vulnerability
+jinja2==2.11.4
