--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,5 @@ jobs:
         uses: snyk/actions/python@master
         env:
           SNYK_TOKEN: a1eb8b76-9f7f-4ff8-8fcb-e951abcdfa23
+        with:
+          args: --severity-threshold=high,critical
