--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ html5lib==1.1  # High vulnerability
 werkzeug==1.0.1  # High vulnerability
 jinja2==2.11.3  # High vulnerability
 jinja2==2.11.4
+jinja2==2.11.5
